style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-padding-top: 100px;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #ededec;
  min-height: 100vh;
  font-size: 1.563rem;
  font-family: "Orbitron", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
}

nav {
  position: fixed;
  height: 70px;
  width: 100%;
  background: #162936;
  z-index: 2;
  filter: drop-shadow(0px 2px 4px #15ffee);
}

.logo {
  margin-left: 20px;
  position: absolute;
  top: 25%;
  filter: drop-shadow(0px 0px 20px #15ffee);
}

.logo-z {
  z-index: 1;
}

.logo img {
  width: 50px;
}

.nav-links {
  display: flex;
  flex-direction: column;
  list-style: none;
  justify-content: space-around;
  align-items: center;
  margin: auto;
  padding-top: 40px;
  position: fixed;
  background-color: #162936;
  height: 100vh;
  width: 100%;
  /* size circle starts at */
  clip-path: circle(80px at 90% -10%);
  -webkit-clip-path: circle(80px at 90% -10%);
  transition: all 1s ease-out;
}

.nav-links.open {
  /* how far the circle extends */
  clip-path: circle(1000px at 90% -10%);
  -webkit-clip-path: circle(1000px at 90% -10%);
}

.nav-links li a {
  color: rgb(255, 255, 255);
  text-decoration: none;
  font-size: 1rem;
}

.nav-links li a:hover,
.about-link:hover {
  transition: all 0.5s ease-in-out;
  color: #15ffee;
}

/* hamburger animation */
svg {
  position: absolute;
  cursor: pointer;
  right: 1%;
  z-index: 3;
  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
}

.active svg {
  transform: rotate(90deg);
}

path {
  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
    stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
    stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
}

path:nth-child(1) {
  transform-origin: 36% 40%;
}

path:nth-child(2) {
  stroke-dasharray: 29 299;
}

path:nth-child(3) {
  transform-origin: 35% 63%;
}

path:nth-child(4) {
  stroke-dasharray: 29 299;
}

path:nth-child(5) {
  transform-origin: 61% 52%;
}

path:nth-child(6) {
  transform-origin: 62% 52%;
}

.active path:nth-child(1) {
  transform: translateX(9px) translateY(1px) rotate(45deg);
}

.active path:nth-child(2) {
  stroke-dasharray: 225 299;
  stroke-dashoffset: -72px;
}

.active path:nth-child(3) {
  transform: translateX(9px) translateY(1px) rotate(-45deg);
}

.active path:nth-child(4) {
  stroke-dasharray: 225 299;
  stroke-dashoffset: -72px;
}

.active path:nth-child(5) {
  transform: translateX(9px) translateY(1px) rotate(-45deg);
}

.active path:nth-child(6) {
  transform: translateX(9px) translateY(1px) rotate(45deg);
}

/* fade effect */
.nav-links li {
  opacity: 0;
}

.nav-links li a {
  font-size: 1.563rem;
}

.nav-links li:nth-child(1) {
  transition: all 0.5s ease 0.2s;
}

.nav-links li:nth-child(2) {
  transition: all 0.5s ease 0.4s;
}

.nav-links li:nth-child(3) {
  transition: all 0.5s ease 0.6s;
}

.nav-links li:nth-child(4) {
  transition: all 0.5s ease 0.8s;
}

li.fade {
  opacity: 1;
}

.home-header {
  background-color: #ededec;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 100px 0 80px 0;
}

.dev-img {
  height: 270px;
  width: 270px;
  border-radius: 50%;
  margin: 40px 0 20px 0;
  filter: drop-shadow(0px -10px 20px #15ffee);
  animation: zoom-in-zoom-out 1.5s ease;
}

/* animation starts at 1/2 size and grows
half way through the animation the img is slightly larger then 100%
then ends by shrinking down to 100% size */
@keyframes zoom-in-zoom-out {
  0% {
    transform: scale(0.5, 0.5);
  }
  50% {
    transform: scale(1.1, 1.1);
  }
  100% {
    transform: scale(1, 1);
  }
}

h1 {
  font-size: 2.063rem;
  margin-bottom: 15px;
}

/* project section on homepage */
.all-projects-container {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.project-container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: 12px;
  background-color: #162936;
  width: 100%;
  height: 244px;
  color: #ffffff;
  font-size: 1.125rem;
  text-align: center;
  padding: 0 15px 0 15px;
  overflow: hidden;
}

.clip {
  clip-path: polygon(0 0%, 100% 7%, 100% 93%, 0% 100%);
  -webkit-clip-path: (0 0%, 100% 7%, 100% 93%, 0% 100%);
}

.clip-mid {
  clip-path: polygon(0% 93%, 0 7%, 100% 0%, 100% 100%);
  -webkit-clip-path: polygon(0% 93%, 0 7%, 100% 0%, 100% 100%);
}

.project-img-container {
  position: relative;
  opacity: 0;
  transition: 1s all ease;
  filter: drop-shadow(0px 0px 10px #15ffee);
}

.slide-from-left {
  transform: translateX(-150px);
}

.slide-from-right {
  transform: translateX(150px);
}

/* below is for the animation that happens when the element comes into view  */
.slide-from-left.slide-in-active,
.slide-from-right.slide-in-active {
  transform: translateX(0);
  opacity: 1;
}

.project-img-link {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #ffffff;
  border-radius: 50%;
  width: 140px;
  height: 140px;
}

.first-project-img {
  width: 100px;
  padding-bottom: 15px;
}

.second-project-img {
  width: 95px;
  padding-bottom: 5px;
}

.third-project-img {
  width: 120px;
}

.about-link {
  display: flex;
  align-items: center;
  font-size: 1.5rem;
  text-align: center;
  text-decoration: none;
  color: #ffffff;
  background-color: #162936;
  width: 9.75rem;
  height: 9.75rem;
  border-radius: 50%;
  padding: 1px 20px 0 20px;
  filter: drop-shadow(0px 4px 4px #15ffee);
  margin: 55px 0 55px 0;
  opacity: 0;
  transition: 1s all ease;
}

/* below is for hover effect for about button */
.shrink {
  transition: all 0.2s ease-in-out;
}

.shrink:hover {
  transform: scale(0.9);
}

/* below is for the animation that happens when the about button comes into view  */
@keyframes zoom-in {
  0% {
    transform: scale(0.5, 0.5);
  }
  100% {
    transform: scale(1, 1);
  }
}

.about-link.about-active {
  animation: zoom-in 1s ease;
  opacity: 1;
}

.grow {
  transition: all 0.2s ease-in-out;
}
/* ... */

